KYAN-217 correct visual tests - content font weight, margin bottom for tag

--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
@@ -23,6 +23,7 @@
   border-radius: var(--border-radius-1);
   font-weight: var(--kyanite-weight-semibold);
   @extend .px-4;
+  @extend .mb-2;
 
   &.is-normal {
     font-size: var(--font-size-14);
