KYAN-217 replace grey with gray, correct visual tests

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.blog-article-header/o.blog-article-header.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.blog-article-header/o.blog-article-header.scss
@@ -29,6 +29,7 @@
     @extend .pb-5;
 
     .content {
+      color: var(--kyanite-gray-40);
       small:first-of-type {
         @extend .pr-4;
       }
