--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -108,6 +108,7 @@
     --kyanite-easing: ease-in-out;
     --kyanite-background: #fff;
     --kyanite-background-l: 100%;
+    --kyanite-strong-weight: var(--kyanite-weight-bold);
 
     --kyanite-radius: 2px;
 
@@ -263,6 +264,6 @@
 
   // fix content color inconsistencies after migration to bulma v1 - otherwise author should change it all manually
   .template-blogarticlepage .content {
-    color: var(--kyanite-gray-15) !important;
+    color: var(--kyanite-gray-15);
   }
 }
