--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.scss
@@ -23,4 +23,8 @@
   &:not(:last-child) {
     @extend .mr-0;
   }
+
+  .block:not(:last-child), .box:not(:last-child), .breadcrumb:not(:last-child), .buttons:not(:last-child), .card:not(:last-child), .content:not(:last-child), .field:not(:last-child), .file:not(:last-child), .fixed-grid:not(:last-child), .grid:not(:last-child), .level:not(:last-child), .media:not(:last-child), .message:not(:last-child), .notification:not(:last-child), .pagination:not(:last-child), .progress:not(:last-child), .skeleton-block:not(:last-child), .subtitle:not(:last-child), .table-container:not(:last-child), .table:not(:last-child), .tabs:not(:last-child), .tags:not(:last-child), .title:not(:last-child) {
+    @extend .mb-0;
+  }
 }
