KYAN-217 correct visual tests- navbar section text

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -292,6 +292,9 @@
         background-color: inherit;
       }
     }
+    .navbar-section {
+      color: var(--kyanite-gray-60);
+    }
   }
 
   @include breakpoint.media-breakpoint-large {
