--- a/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/template-default.html
+++ b/applications/blogs/backend/src/main/resources/libs/kyanite/blogs/components/blogarticleauthorbio/template-default.html
@@ -17,40 +17,49 @@
 
 */-->
 
-<template data-sly-template.default="${ @ author}">
-  <div class="container blog-article-author-bio">
-    <article class="id media">
-      <figure class="photo media-left">
-        <p class="image is-96x96">
-          <img data-sly-test.authorPhoto="${author.authorPhoto}"
-               src="${authorPhoto}" alt="${author.authorPhotoAlt}"
-               class="is-rounded"
-          />
-        </p>
-      </figure>
+<template data-sly-template.default="${ @ model}">
+  <sly data-sly-test.author="${model.authorInfoModel}">
+    <div class="container blog-article-author-bio">
+      <div class="author-bio-block author-info">
+        <article class="id media">
+          <figure class="photo media-left">
+            <p class="image is-96x96">
+              <sly data-sly-set.leadsToAuthorPage="
+              ${ (    (author.authorOwnerPath != null)
+                  &&  (author.authorOwnerPath != currentPage.path) ) }"></sly>
+              <a data-sly-unwrap="${!leadsToAuthorPage}"
+                 href="${author.authorOwnerUrl}" target="">
+                <img data-sly-test.authorPhoto="${author.authorPhoto}"
+                     src="${authorPhoto}" alt="${author.authorPhotoAlt}"
+                     class="is-rounded"
+                />
+              </a>
+            </p>
+          </figure>
 
-      <div class="media-content">
-        <div class="content">
-          <p data-sly-test.authorName="${author.authorName}"
-             class="name">${authorName}</p>
-          <p data-sly-test.authorRole="${author.authorRole}"
-             class="role">${authorRole}</p>
+          <div class="media-content">
+            <div class="content">
+              <p data-sly-test.authorName="${author.authorName}"
+                 class="name">${authorName}</p>
+              <p data-sly-test.authorRole="${author.authorRole}"
+                 class="role">${authorRole}</p>
+            </div>
+          </div>
+        </article>
+
+        <div class="description content">
+          <p data-sly-test.authorDescription="${author.authorDescription}">${authorDescription}</p>
         </div>
+
       </div>
-    </article>
-
-    <div class="description content">
-      <p data-sly-test.authorDescription="${author.authorDescription}">${authorDescription}</p>
+      <div class="author-bio-block social-media">
+        <sly data-sly-set.socialMediaMode=
+                 "${ (    (author.authorOwnerPath == currentPage.path)
+                 || (author.authorOwnerPath == resource.path))
+               ? wcmmode.editModeAttribute
+               : wcmmode.previewModeAttribute}"></sly>
+        <sly data-sly-resource="${author.socialMedia @ requestAttributes=socialMediaMode}"></sly>
+      </div>
     </div>
-
-    <!--/*
-          TODO https://teamds.atlassian.net/browse/WSIO-176
-    */-->
-    <!--/*
-    <a data-sly-test.authorName="${author.authorName}"
-       class="link is-medium is-dark">
-      ${authorName}'s other articles <span class="mdi mdi-arrow-top-right"></span>
-    </a>
-    */-->
-  </div>
+  </sly>
 </template>
