--- a/applications/fragments/backend/src/main/resources/libs/kyanite/fragments/components/fragment/fragment.html
+++ b/applications/fragments/backend/src/main/resources/libs/kyanite/fragments/components/fragment/fragment.html
@@ -17,6 +17,6 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.kyanite.fragments.components.models.ExperienceFragmentComponent">
-  <sly data-sly-use.template="./fragment-template.html"
+  <sly data-sly-use.template="/libs/kyanite/fragments/api/fragment/templates/fragment-template.html"
        data-sly-call="${template.fragment @ model=model}"></sly>
 </sly>
