--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/tabs/tabs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/tabs/tabs.html
@@ -64,9 +64,8 @@
                     </sly>
                 </div>
             </div>
-            <!-- mobile layout start (applies only to horizontal mode tabs) -->
-            <sly data-sly-test="${!model.vertical}"
-                 data-sly-use.mobile="./template-tabs-mobile.html"
+            <!-- mobile layout start -->
+            <sly data-sly-use.mobile="./template-tabs-mobile.html"
                  data-sly-call="${mobile.accordion @ model }"></sly>
             <!-- mobile layout end -->
         </sly>
