--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
@@ -56,4 +56,7 @@
     color: var(--kyanite-gray-15) !important;
     display: inline-block;
   }
+  .simplebar-scrollbar:before {
+    background: var(--kyanite-gray-15);
+  }
 }
