--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
 
     li.button {
       font-weight: var(--kyanite-weight-medium);
@@ -59,4 +60,9 @@
   .simplebar-scrollbar:before {
     background: var(--kyanite-gray-15);
   }
+  .simplebar-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 }
