--- a/applications/common/frontend/src/global.scss
+++ b/applications/common/frontend/src/global.scss
@@ -72,3 +72,6 @@ input[type=checkbox] {
   --kyanite-table-background-color: var(--kyanite-body-background-color);
 }
 
+strong {
+  color: inherit;
+}
