--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/table.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/table/table.html
@@ -20,6 +20,14 @@
   <sly data-sly-set.classes="table ${model.tableClasses @ join=' '}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
     <div data-sly-unwrap="${!model.isScrollable}" class="table-container">
+      <div data-sly-test="${model.isScrollable}" class="table-button-container">
+        <button class="table-button" aria-label="Scroll to the left">
+          <i class="mdi mdi-arrow-left"></i>
+        </button>
+        <button class="table-button" aria-label="Scroll to the right">
+          <i class="mdi mdi-arrow-right"></i>
+        </button>
+      </div>
       <table class="${classes}">
         <sly
             data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
