WSIO-726 fix code snippet message bg

--- a/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
+++ b/applications/common/frontend/src/bulma-overwrite-v1/_index.scss
@@ -91,6 +91,8 @@
     --kyanite-gray-15-l: 16%; // #2A2A2A old grey-900
     --kyanite-gray-10-l: 9%;  // #181818 old grey-1000
 
+    --kyanite-custom-codesnippet-icon-message-background-color: var(--kyanite-primary);
+
   .button {
     --kyanite-control-radius: var(--border-radius-1);
   }
