--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.author-photo.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.author-photo.scss
@@ -1,6 +1,6 @@
 /*!
  * <!--
- *     Copyright (C) 2024 Dynamic Solutions
+ *     Copyright (C) 2023 Dynamic Solutions
  *
  *     Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -16,8 +16,8 @@
  * -->
  */
 
-@use 'src/atomic-design-system/02-molecule/m.quote' as m-quote;
-
-.quote {
-  @include m-quote.m-quote;
+@mixin a-author-photo {
+  .image {
+    margin-bottom: 0 !important;
+  }
 }
