--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.line-placeholder.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.line-placeholder.scss
@@ -1,6 +1,6 @@
 /*!
  * <!--
- *     Copyright (C) 2024 Dynamic Solutions
+ *     Copyright (C) 2023 Dynamic Solutions
  *
  *     Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -16,8 +16,23 @@
  * -->
  */
 
-@use 'src/atomic-design-system/02-molecule/m.quote' as m-quote;
+@use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
 
-.quote {
-  @include m-quote.m-quote;
+@mixin a-line-placeholder ($--line-placeholder-width, $--line-placeholder-margin-right) {
+
+  position: relative;
+  padding-left: ($--line-placeholder-width + $--line-placeholder-margin-right);
+
+  &:before {
+    content: "";
+    display: inline-block;
+    border-top: 1px solid;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    margin-right: $--line-placeholder-margin-right;
+    width: $--line-placeholder-width;
+  }
+
 }
