WSIO-726 minor changes, init Simplebar from in js

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/codesnippet/codesnippet.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/codesnippet/codesnippet.html
@@ -31,7 +31,7 @@
       <i class="mdi mdi-24px mdi-content-copy"></i>
       <span class="icon__message"></span>
     </span>
-    <pre class="code-snippet__pre"><code class="${model.fileType}" data-simplebar data-simplebar-auto-hide="false">${model.code}</code></pre>
+    <pre class="code-snippet__pre"><code class="${model.fileType}">${model.code}</code></pre>
     <div class="code-snippet__footer">
       <button class="code-snippet-button" aria-label="Show more">
         <span class="code-snippet-button-text">Show more</span>
