WSIO-719 table refactoring

--- a/applications/common/frontend/src/components/Table/Table.scss
+++ b/applications/common/frontend/src/components/Table/Table.scss
@@ -59,7 +59,7 @@
         }
       }
     }
-    &.is-first-cell-locked {
+    &.is-first-column-locked {
       .table {
         thead {
           tr th:first-child {
